--- a/latihan/latihan1/L1d233040109.html
+++ b/latihan/latihan1/L1d233040109.html
@@ -1,6 +1,5 @@
 <html>
     <head>
-        <title>ini judul</title>
     </head>
     <body>
         percobaan yang<DEL>salah</DEL><BR>
@@ -19,4 +18,5 @@
         </FONT>
         
     </body>
-</html>
+</html>       <title>ini judul</title>
+ 
