--- a/latihan/latihan1/T1233040109.html
+++ b/latihan/latihan1/T1233040109.html
@@ -2,7 +2,7 @@
     <head>
         <title>CV233040109</title>
     </head>
-<body>
+<body bgcolor="green">
     <H1 ALIGN="CENTER">CURICULUM VITAE</H1>
     <HR>
     <IMG SRC="c:\Users\Nauval Muhammad Abdu\Pictures\Gambar WhatsApp 2023-10-01 pukul 09.01.33.jpg" ALIGN="RIGHT" WIDTH="200" HEIGHT="300"
@@ -10,6 +10,7 @@
     <P>Nama: Nauval Muhammad Abdul Azis</P>
     <p>Alamat: Komplek BMI Blok G11 NO 47 Rt 13/16</p>
     <p>No Telepon: 081323200118</p>
+    <p>Tempat, Tanggal Lahir: Bandung, 29 Desember 2004</p>
     <H3><b>DESKRIPSI</b></H3>
 <P>Saya adalah seorang Mahasiswa Unpas (Universitas Pasundan) Semester 1, saya juga seorang santri dari pondok pesantren Nurul Iman Cibaduyut Bandung. Asal saya dari Bandung, Hobi saya adalah olahraga, main game dan mengaji. Saya anak ke2 dari 3 bersaudara.</P>
     <H3><b>PENDIDIKAN</b></H3>
