--- a/latihan/latihan3/L3d233040109.html
+++ b/latihan/latihan3/L3d233040109.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Latihan 3a - CSS Dasar</title>
-    <link rel="stylesheet" href="L3a233040109.css" </head>
+    <link rel="stylesheet" href="L3d233040109.css" </head>
 
 <body>
 
