--- a/latihan/latihan3/L3c233040109.html
+++ b/latihan/latihan3/L3c233040109.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <title>Latihan 3a - CSS Dasar</title>
-    <link rel="stylesheet" href="L3a233040109.css" </head>
+    <title>Latihan 3c - CSS Dasar</title>
+    <link rel="stylesheet" href="L3c233040109.css" </head>
 
 <body>
 
