--- a/latihan/latihan4/T4a233040109.html
+++ b/latihan/latihan4/T4a233040109.html
@@ -9,8 +9,49 @@
 </head>
 
 <body>
-    <div class="header"></div>
-    <div class="hero"></div>
+    <div class="container">
+        <div class="header">
+            <h1 class="judul">mywebsite</h1>
+            <ul>
+                <li><a href="#">home</a></li>
+                <li><a href="#">about</a></li>
+                <li><a href="#">products</a></li>
+                <li><a href="#">services</a></li>
+                <li><a href="#">contact</a></li>
+            </ul>
+        </div>
+        <div class="hero"></div>
+        <div class="content">
+            <h2>Judul Artikel</h2>
+            <p class="penulis">ditulis oleh <a href="#">Nauval Muhammad Abdul Azis</a>. pada 20 Oktober 2023.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae quo eum sunt? Aliquam asperiores distinctio
+                facere corporis quod neque dignissimos commodi, molestias accusamus, esse odit temporibus magni maxime,
+                sapiente perferendis?</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit temporibus odio explicabo sunt dolores
+                voluptas, itaque reiciendis. Dolor consectetur esse eveniet dicta ut est eaque ipsa corrupti, tempora
+                magni.
+                Voluptatibus autem quisquam quam, in fugit blanditiis, harum hic consequatur neque minus necessitatibus
+                labore maiores, beatae temporibus qui delectus. Incidunt placeat, harum corrupti autem ab error. Placeat
+                iusto deserunt modi mollitia obcaecati laborum esse quod ullam minima cupiditate! Sint nulla temporibus
+                molestiae ratione nostrum doloremque excepturi suscipit. Quod, corporis. Quis ipsum dolores laborum
+                natus
+                nemo ipsa amet quisquam beatae laudantium non reiciendis cumque voluptatem, ad vel minus eos dolor!
+                Dolor,
+                rem.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur iste voluptates, qui ratione maiores
+                alias,
+                dolor, commodi repellat autem quod consequatur obcaecati molestiae. Alias reiciendis placeat
+                exercitationem
+                fugit quasi quo neque reprehenderit rerum, praesentium itaque doloremque aspernatur qui sed, sit tempore
+                nihil id velit aperiam ea expedita? Voluptatum cumque non beatae commodi tempora, maxime libero quos
+                facilis
+                quis possimus magni natus velit illum et voluptatem obcaecati? Eligendi natus id necessitatibus placeat
+                eaque blanditiis laudantium repudiandae inventore, maxime dicta fuga labore.</p>
+        </div>
+        <div class="footer">
+            <p class="copy">copyright 2016. NauvalAzis</p>
+        </div>
+    </div>
 </body>
 
 </html>
