--- a/kuliah/pertemuan6/latihan1.html
+++ b/kuliah/pertemuan6/latihan1.html
@@ -38,8 +38,8 @@
         .pembungkus {
             width: 300px;
             height: 300px;
-            border: 5px;
-            solid
+            border: 5px solid;
+
         }
     </style>
 </head>
