--- a/kuliah/pertemuan9/latihan1.html
+++ b/kuliah/pertemuan9/latihan1.html
@@ -47,6 +47,15 @@
         </nav>
 
     </div>
+
+    <script>
+        const menu-toggle = document.queryselector('.menu-toggle');
+        const nav = document.querySelector('nav ul');
+
+        menutoggle.addEventlistener('click', function () {
+            nav.classlist.toggle('slide');
+        });
+    </script>
 </body>
 
 </html>
